# openrouter-cli

./: .gitignore  =3.0.0  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  mcp_servers.json.example  models.yaml  prometheus.yml  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  setup.py  setup.sh  system_prompt.txt.example
examples/: ai_file_ops_example.py  chat_example.py  file_analysis_example.py  file_operations_demo.py  mcp_example.py  sample-mcp_client.py  sample-mcp_server.py  schema_example.py  tool_demo.py
openrouter_cli/: __init__.py  __main__.py  key_manager.py  main.py  openrouter_client.py  schema_manager.py  tool_manager.py
openrouter_cli/config/: mcp_config.yaml
openrouter_cli/schemas/: analysis.yaml  basic.yaml  chat.yaml  code.yaml  detailed.yaml  qa.yaml  tool_enhanced.yaml
openrouter_cli/tools/: __init__.py  code_execution.py  file_operations.py  image_generation.py  openrouter_client.py  web_search.py
openrouter_cli/tools/file_operations/: ai_analyze.sh  ai_ops.py  archive_ops.py  backup_ops.py  base.py  cli.py  compare_ops.py  config.yaml  file_ops.py  search_ops.py  security_ops.py  sync_ops.py
openrouter_cli/tools/mcp/: mcp_client.py  mcp_manager.py  mcp_ops.py  mcp_server.py
tests/: __init__.py  run_tests.py  test_ai_ops.py  test_config.yaml  test_mcp_client.py  test_mcp_connection.py  test_mcp_ops.py  test_openrouter_cli.py
