[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-cli"
version = "0.0.1"
description = "A command-line interface for OpenRouter's API"
readme = "README.md"
authors = [
    {name = "Yusef Ulum", email = "yusef314159@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=10.0.0",
    "pyyaml>=6.0",
    "pyperclip>=1.8.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
    "cryptography>=41.0.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mexyusef/openrouter-cli"
"Bug Tracker" = "https://github.com/mexyusef/openrouter-cli/issues"

[project.scripts]
openrouter-cli = "openrouter_cli.main:main"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["openrouter_cli"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
