[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-cli"
version = "0.0.1"
description = "A command-line interface for OpenRouter's API"
readme = "README.md"
authors = [
    {name = "Yusef Ulum", email = "yusef314159@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=10.0.0",
    "pyyaml>=6.0",
    "pyperclip>=1.8.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mexyusef/openrouter-cli"
"Bug Tracker" = "https://github.com/mexyusef/openrouter-cli/issues"

[project.scripts]
openrouter-cli = "openrouter_cli.main:main"
